deploy: aa69c8a0306efa63767e34464c59acb1712cb227

--- a/_sources/facts/examples.ipynb
+++ b/_sources/facts/examples.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f5e5eb27",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bea6be5a",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "3b1b4c39",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        " 'attribute((scale,zero),4,true).']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,6 +678,171 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50a9a427",
+   "metadata": {},
+   "source": [
+    "## Facets\n",
+    "\n",
+    "Facet produces horizontal or vertical small multiples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94641063",
+   "metadata": {},
+   "source": [
+    "### Facet Scatterplot into Columns\n",
+    "\n",
+    "![chart](./facet.png \"Facet Scatterplot into Columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8731f22b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['attribute(number_rows,root,100).',\n",
+       " 'entity(field,root,0).',\n",
+       " 'attribute((field,name),0,temperature).',\n",
+       " 'attribute((field,type),0,number).',\n",
+       " 'entity(field,root,1).',\n",
+       " 'attribute((field,name),1,wind).',\n",
+       " 'attribute((field,type),1,number).',\n",
+       " 'entity(field,root,2).',\n",
+       " 'attribute((field,name),2,condition).',\n",
+       " 'attribute((field,type),2,string).',\n",
+       " 'entity(mark,root,3).',\n",
+       " 'attribute((mark,type),3,point).',\n",
+       " 'entity(encoding,3,4).',\n",
+       " 'attribute((encoding,channel),4,x).',\n",
+       " 'attribute((encoding,field),4,temperature).',\n",
+       " 'entity(encoding,3,5).',\n",
+       " 'attribute((encoding,channel),5,y).',\n",
+       " 'attribute((encoding,field),5,wind).',\n",
+       " 'entity(scale,root,6).',\n",
+       " 'attribute((scale,channel),6,x).',\n",
+       " 'attribute((scale,type),6,linear).',\n",
+       " 'entity(scale,root,7).',\n",
+       " 'attribute((scale,channel),7,y).',\n",
+       " 'attribute((scale,type),7,linear).',\n",
+       " 'entity(facet,root,8).',\n",
+       " 'attribute((facet,channel),8,col).',\n",
+       " 'attribute((facet,field),8,condition).']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show(\n",
+    "    data([\"temperature\", \"wind\", \"condition\"]),\n",
+    "    {\n",
+    "        \"mark\": [\n",
+    "            {\n",
+    "                \"type\": \"point\",\n",
+    "                \"encoding\": [\n",
+    "                    {\"channel\": \"x\", \"field\": \"temperature\"},\n",
+    "                    {\"channel\": \"y\", \"field\": \"wind\"},\n",
+    "                ],\n",
+    "            }\n",
+    "        ],\n",
+    "        \"scale\": [\n",
+    "            {\"channel\": \"x\", \"type\": \"linear\"},\n",
+    "            {\"channel\": \"y\", \"type\": \"linear\"},\n",
+    "        ],\n",
+    "        \"facet\": [\n",
+    "            {\"channel\": \"col\", \"field\": \"condition\"},\n",
+    "        ],\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c136876",
+   "metadata": {},
+   "source": [
+    "### Facet Scatterplot by Binned Data into Columns\n",
+    "\n",
+    "![chart](./facet_bin.png \"Facet Scatterplot by Binned Data into Columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "58e50843",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['attribute(number_rows,root,100).',\n",
+       " 'entity(field,root,0).',\n",
+       " 'attribute((field,name),0,temperature).',\n",
+       " 'attribute((field,type),0,number).',\n",
+       " 'entity(field,root,1).',\n",
+       " 'attribute((field,name),1,wind).',\n",
+       " 'attribute((field,type),1,number).',\n",
+       " 'entity(field,root,2).',\n",
+       " 'attribute((field,name),2,condition).',\n",
+       " 'attribute((field,type),2,string).',\n",
+       " 'entity(mark,root,3).',\n",
+       " 'attribute((mark,type),3,point).',\n",
+       " 'entity(encoding,3,4).',\n",
+       " 'attribute((encoding,channel),4,x).',\n",
+       " 'attribute((encoding,field),4,condition).',\n",
+       " 'entity(encoding,3,5).',\n",
+       " 'attribute((encoding,channel),5,y).',\n",
+       " 'attribute((encoding,field),5,wind).',\n",
+       " 'entity(scale,root,6).',\n",
+       " 'attribute((scale,channel),6,x).',\n",
+       " 'attribute((scale,type),6,linear).',\n",
+       " 'entity(scale,root,7).',\n",
+       " 'attribute((scale,channel),7,y).',\n",
+       " 'attribute((scale,type),7,linear).',\n",
+       " 'entity(facet,root,8).',\n",
+       " 'attribute((facet,channel),8,col).',\n",
+       " 'attribute((facet,field),8,temperature).',\n",
+       " 'attribute((facet,binning),8,10).']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show(\n",
+    "    data([\"temperature\", \"wind\", \"condition\"]),\n",
+    "    {\n",
+    "        \"mark\": [\n",
+    "            {\n",
+    "                \"type\": \"point\",\n",
+    "                \"encoding\": [\n",
+    "                    {\"channel\": \"x\", \"field\": \"condition\"},\n",
+    "                    {\"channel\": \"y\", \"field\": \"wind\"},\n",
+    "                ],\n",
+    "            }\n",
+    "        ],\n",
+    "        \"scale\": [\n",
+    "            {\"channel\": \"x\", \"type\": \"linear\"},\n",
+    "            {\"channel\": \"y\", \"type\": \"linear\"},\n",
+    "        ],\n",
+    "        \"facet\": [\n",
+    "            {\"channel\": \"col\", \"field\": \"temperature\", \"binning\": 10},\n",
+    "        ],\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1abe650",
    "metadata": {},
    "source": [
@@ -865,6 +1030,14 @@
     "    },\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc8413e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
