deploy: 6e2081c680d7bf531aaaf18a95da01893c33e990

--- a/_sources/facts/examples.ipynb
+++ b/_sources/facts/examples.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f5e5eb27",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "bea6be5a",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "da257eac",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        " 'attribute((scale,type),3,linear).']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "e71fdd9d",
    "metadata": {
     "scrolled": true
@@ -165,7 +165,7 @@
        " 'attribute((scale,type),3,log).']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "c0316375",
    "metadata": {
     "scrolled": false
@@ -236,7 +236,7 @@
        " 'attribute((scale,zero),5,true).']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "097a4fa1",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        " 'attribute((scale,zero),5,true).']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "3b1b4c39",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        " 'attribute((scale,zero),5,true).']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "26e6229c",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        " 'attribute((scale,type),5,linear).']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "576a7ad3",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
        " 'attribute((scale,type),7,categorical).']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "008b27ad",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
        " 'attribute((scale,type),7,linear).']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,6 +659,189 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a94c8ab",
+   "metadata": {},
+   "source": [
+    "## Stacked Charts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "248eab77",
+   "metadata": {},
+   "source": [
+    "### Stacked Bar Chart\n",
+    "\n",
+    "![chart](./stack.png \"Stacked Bar Chart\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "059acda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['attribute(number_rows,root,100).',\n",
+       " 'entity(field,root,temperature).',\n",
+       " 'attribute((field,name),temperature,temperature).',\n",
+       " 'attribute((field,type),temperature,number).',\n",
+       " 'entity(field,root,condition).',\n",
+       " 'attribute((field,name),condition,condition).',\n",
+       " 'attribute((field,type),condition,string).',\n",
+       " 'entity(view,root,0).',\n",
+       " 'entity(mark,0,1).',\n",
+       " 'attribute((mark,type),1,bar).',\n",
+       " 'entity(encoding,1,2).',\n",
+       " 'attribute((encoding,channel),2,x).',\n",
+       " 'attribute((encoding,field),2,temperature).',\n",
+       " 'attribute((encoding,binning),2,10).',\n",
+       " 'entity(encoding,1,3).',\n",
+       " 'attribute((encoding,channel),3,y).',\n",
+       " 'attribute((encoding,aggregate),3,count).',\n",
+       " 'attribute((encoding,stack),3,zero).',\n",
+       " 'entity(encoding,1,4).',\n",
+       " 'attribute((encoding,channel),4,color).',\n",
+       " 'attribute((encoding,field),4,condition).',\n",
+       " 'entity(scale,0,5).',\n",
+       " 'attribute((scale,channel),5,x).',\n",
+       " 'attribute((scale,type),5,linear).',\n",
+       " 'entity(scale,0,6).',\n",
+       " 'attribute((scale,channel),6,y).',\n",
+       " 'attribute((scale,type),6,linear).',\n",
+       " 'attribute((scale,zero),6,true).',\n",
+       " 'entity(scale,0,7).',\n",
+       " 'attribute((scale,channel),7,color).',\n",
+       " 'attribute((scale,type),7,categorical).']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show(\n",
+    "    data([\"temperature\", \"condition\"]),\n",
+    "    {\n",
+    "        \"view\": [\n",
+    "            {\n",
+    "                \"mark\": [\n",
+    "                    {\n",
+    "                        \"type\": \"bar\",\n",
+    "                        \"encoding\": [\n",
+    "                            {\"channel\": \"x\", \"field\": \"temperature\", \"binning\": 10},\n",
+    "                            {\"channel\": \"y\", \"aggregate\": \"count\", \"stack\": \"zero\"},\n",
+    "                            {\"channel\": \"color\", \"field\": \"condition\"},\n",
+    "                        ],\n",
+    "                    }\n",
+    "                ],\n",
+    "                \"scale\": [\n",
+    "                    {\n",
+    "                        \"channel\": \"x\",\n",
+    "                        \"type\": \"linear\",\n",
+    "                    },\n",
+    "                    {\"channel\": \"y\", \"type\": \"linear\", \"zero\": \"true\"},\n",
+    "                    {\"channel\": \"color\", \"type\": \"categorical\"},\n",
+    "                ],\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84856acd",
+   "metadata": {},
+   "source": [
+    "### Normalized (Percentage) Stacked Bar Chart\n",
+    "\n",
+    "![chart](./stack_normalize.png \"Normalized Stacked Bar Chart\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c57b321f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['attribute(number_rows,root,100).',\n",
+       " 'entity(field,root,temperature).',\n",
+       " 'attribute((field,name),temperature,temperature).',\n",
+       " 'attribute((field,type),temperature,number).',\n",
+       " 'entity(field,root,condition).',\n",
+       " 'attribute((field,name),condition,condition).',\n",
+       " 'attribute((field,type),condition,string).',\n",
+       " 'entity(view,root,0).',\n",
+       " 'entity(mark,0,1).',\n",
+       " 'attribute((mark,type),1,bar).',\n",
+       " 'entity(encoding,1,2).',\n",
+       " 'attribute((encoding,channel),2,x).',\n",
+       " 'attribute((encoding,aggregate),2,count).',\n",
+       " 'attribute((encoding,stack),2,normalize).',\n",
+       " 'entity(encoding,1,3).',\n",
+       " 'attribute((encoding,channel),3,y).',\n",
+       " 'attribute((encoding,field),3,temperature).',\n",
+       " 'attribute((encoding,binning),3,10).',\n",
+       " 'entity(encoding,1,4).',\n",
+       " 'attribute((encoding,channel),4,color).',\n",
+       " 'attribute((encoding,field),4,condition).',\n",
+       " 'entity(scale,0,5).',\n",
+       " 'attribute((scale,channel),5,x).',\n",
+       " 'attribute((scale,type),5,linear).',\n",
+       " 'attribute((scale,zero),5,true).',\n",
+       " 'entity(scale,0,6).',\n",
+       " 'attribute((scale,channel),6,y).',\n",
+       " 'attribute((scale,type),6,linear).',\n",
+       " 'entity(scale,0,7).',\n",
+       " 'attribute((scale,channel),7,color).',\n",
+       " 'attribute((scale,type),7,categorical).']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show(\n",
+    "    data([\"temperature\", \"condition\"]),\n",
+    "    {\n",
+    "        \"view\": [\n",
+    "            {\n",
+    "                \"mark\": [\n",
+    "                    {\n",
+    "                        \"type\": \"bar\",\n",
+    "                        \"encoding\": [\n",
+    "                            {\n",
+    "                                \"channel\": \"x\",\n",
+    "                                \"aggregate\": \"count\",\n",
+    "                                \"stack\": \"normalize\",\n",
+    "                            },\n",
+    "                            {\"channel\": \"y\", \"field\": \"temperature\", \"binning\": 10},\n",
+    "                            {\"channel\": \"color\", \"field\": \"condition\"},\n",
+    "                        ],\n",
+    "                    }\n",
+    "                ],\n",
+    "                \"scale\": [\n",
+    "                    {\"channel\": \"x\", \"type\": \"linear\", \"zero\": \"true\"},\n",
+    "                    {\"channel\": \"y\", \"type\": \"linear\"},\n",
+    "                    {\"channel\": \"color\", \"type\": \"categorical\"},\n",
+    "                ],\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "71c5b165",
    "metadata": {},
    "source": [
@@ -675,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "e0938a4f",
    "metadata": {},
    "outputs": [
@@ -704,7 +887,7 @@
        " 'attribute((scale,zero),5,true).']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "8731f22b",
    "metadata": {},
    "outputs": [
@@ -797,7 +980,7 @@
        " 'attribute((facet,field),6,condition).']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "58e50843",
    "metadata": {},
    "outputs": [
@@ -880,7 +1063,7 @@
        " 'attribute((facet,binning),6,10).']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "414c7715",
    "metadata": {},
    "outputs": [
@@ -975,7 +1158,7 @@
        " 'attribute((scale,zero),9,true).']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "fc4db666",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1246,7 @@
        " 'attribute((scale,zero),8,true).']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
