--- a/_sources/guide.ipynb
+++ b/_sources/guide.ipynb
@@ -5,7 +5,7 @@
    "id": "mechanical-pointer",
    "metadata": {},
    "source": [
-    "# How to customize or extend the knowledge base"
+    "# Guides"
    ]
   },
   {
@@ -13,16 +13,17 @@
    "id": "promising-steal",
    "metadata": {},
    "source": [
-    "## guideline\n",
+    "## How to customize or extend the knowledge base\n",
+    "\n",
     "You can design your own description language and use it with Draco or extend the existing language we use here. If you don't know where to start with the constraints, you can first use our [`run_clingo`](https://dig.cmu.edu/draco2/api/run.html#draco.run.run_clingo) and [`programs`](https://dig.cmu.edu/draco2/api/programs.html) API to generate some recommendations. Then, you should be able to find some recommendations that should have been left out, and you can write constraints to reflect them.  \n",
     "If you write your own despription language, you need to set up the search space in a similar way to [`generate.lp`](https://github.com/cmudig/draco2/blob/main/draco/asp/generate.lp) before trying to generate recommendations.\n",
     "\n",
-    "For example, the following snippet shows how to use the `run_clingo` API to generate 1 recommendation. You can set a different number to look into more results. "
+    "For example, the following snippet shows how to use the `run_clingo` API to generate one recommendation. You can set a different number to look into more results. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "lonely-cigarette",
    "metadata": {},
    "outputs": [
@@ -41,11 +42,12 @@
       "                                  {'channel': 'size',\n",
       "                                   'field': ('f', 1),\n",
       "                                   'scale_type': 'linear'}],\n",
+      "                     'mark_encoding_cont': ('e', 1),\n",
       "                     'scale': ('s', 1),\n",
       "                     'type': 'text'}],\n",
       "           'scale': [{'channel': 'text', 'type': 'linear'},\n",
       "                     {'channel': 'size', 'type': 'linear'}]}]}\n",
-      "[attribute(number_rows,root,100), attribute((field,name),(f,0),temperature), attribute((field,type),(f,0),number), attribute((field,name),(f,1),precipitation), attribute((field,type),(f,1),number), attribute((encoding,field),(e,0),(f,0)), attribute((encoding,field),(e,1),(f,1)), attribute(task,root,value), attribute((scale,type),(s,1),linear), attribute((scale,type),(s,0),linear), attribute((encoding,channel),(e,1),size), attribute((encoding,channel),(e,0),text), attribute((mark,type),(m,0),text), attribute((scale,channel),(s,1),size), attribute((scale,channel),(s,0),text), attribute((mark,channel),(m,0),size), attribute((mark,channel),(m,0),text), attribute((mark,scale),(m,0),(s,0)), attribute((mark,scale),(m,0),(s,1)), attribute((encoding,scale_type),(e,0),linear), attribute((encoding,scale_type),(e,1),linear), entity(field,root,(f,0)), entity(field,root,(f,1)), entity(view,root,(v,0)), entity(mark,(v,0),(m,0)), entity(encoding,(m,0),(e,0)), entity(encoding,(m,0),(e,1)), entity(scale,(v,0),(s,0)), entity(scale,(v,0),(s,1))]\n"
+      "[attribute(number_rows,root,100), attribute((field,name),(f,0),temperature), attribute((field,type),(f,0),number), attribute((field,name),(f,1),precipitation), attribute((field,type),(f,1),number), attribute((encoding,field),(e,0),(f,0)), attribute((encoding,field),(e,1),(f,1)), attribute(task,root,value), attribute((scale,type),(s,1),linear), attribute((scale,type),(s,0),linear), attribute((encoding,channel),(e,1),size), attribute((encoding,channel),(e,0),text), attribute((mark,type),(m,0),text), attribute((scale,channel),(s,1),size), attribute((scale,channel),(s,0),text), attribute((mark,channel),(m,0),size), attribute((mark,channel),(m,0),text), attribute((mark,scale),(m,0),(s,0)), attribute((mark,scale),(m,0),(s,1)), attribute((encoding,scale_type),(e,0),linear), attribute((encoding,scale_type),(e,1),linear), attribute(mark_encoding_cont,(m,0),(e,0)), attribute(mark_encoding_cont,(m,0),(e,1)), entity(field,root,(f,0)), entity(field,root,(f,1)), entity(view,root,(v,0)), entity(mark,(v,0),(m,0)), entity(encoding,(m,0),(e,0)), entity(encoding,(m,0),(e,1)), entity(scale,(v,0),(s,0)), entity(scale,(v,0),(s,1))]\n"
      ]
     }
    ],
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "5df17ad2",
    "metadata": {},
    "outputs": [
@@ -131,18 +133,21 @@
       "                                   'field': ('f', 1),\n",
       "                                   'scale_type': 'categorical'}],\n",
       "                     'mark_channel_discrete_or_binned': 'shape',\n",
+      "                     'mark_encoding_discrete_or_binned': ('e', 1),\n",
       "                     'scale': ('s', 1),\n",
       "                     'type': 'rect'}],\n",
       "           'scale': [{'channel': 'shape', 'type': 'categorical'},\n",
       "                     {'channel': 'size', 'type': 'categorical'}]}]}\n",
-      "[attribute(number_rows,root,100), attribute((field,name),(f,0),temperature), attribute((field,type),(f,0),number), attribute((field,name),(f,1),precipitation), attribute((field,type),(f,1),number), attribute((encoding,field),(e,0),(f,0)), attribute((encoding,field),(e,1),(f,1)), attribute(task,root,value), attribute((scale,type),(s,1),categorical), attribute((scale,type),(s,0),categorical), attribute((encoding,channel),(e,1),size), attribute((encoding,channel),(e,0),shape), attribute((mark,type),(m,0),rect), attribute((scale,channel),(s,1),size), attribute((scale,channel),(s,0),shape), attribute((mark,channel),(m,0),size), attribute((mark,channel),(m,0),shape), attribute((mark,scale),(m,0),(s,0)), attribute((mark,scale),(m,0),(s,1)), attribute((encoding,scale_type),(e,0),categorical), attribute((encoding,scale_type),(e,1),categorical), attribute(mark_channel_discrete_or_binned,(m,0),size), attribute(mark_channel_discrete_or_binned,(m,0),shape), entity(field,root,(f,0)), entity(field,root,(f,1)), entity(view,root,(v,0)), entity(mark,(v,0),(m,0)), entity(encoding,(m,0),(e,0)), entity(encoding,(m,0),(e,1)), entity(scale,(v,0),(s,0)), entity(scale,(v,0),(s,1))]\n",
-      "['size_without_point_text', 'shape_without_point', 'categorical_not_color']\n"
+      "[attribute(number_rows,root,100), attribute((field,name),(f,0),temperature), attribute((field,type),(f,0),number), attribute((field,name),(f,1),precipitation), attribute((field,type),(f,1),number), attribute((encoding,field),(e,0),(f,0)), attribute((encoding,field),(e,1),(f,1)), attribute(task,root,value), attribute((scale,type),(s,1),categorical), attribute((scale,type),(s,0),categorical), attribute((encoding,channel),(e,1),size), attribute((encoding,channel),(e,0),shape), attribute((mark,type),(m,0),rect), attribute((scale,channel),(s,1),size), attribute((scale,channel),(s,0),shape), attribute((mark,channel),(m,0),size), attribute((mark,channel),(m,0),shape), attribute((mark,scale),(m,0),(s,0)), attribute((mark,scale),(m,0),(s,1)), attribute((encoding,scale_type),(e,0),categorical), attribute((encoding,scale_type),(e,1),categorical), attribute(mark_channel_discrete_or_binned,(m,0),size), attribute(mark_channel_discrete_or_binned,(m,0),shape), attribute(mark_encoding_discrete_or_binned,(m,0),(e,0)), attribute(mark_encoding_discrete_or_binned,(m,0),(e,1)), entity(field,root,(f,0)), entity(field,root,(f,1)), entity(view,root,(v,0)), entity(mark,(v,0),(m,0)), entity(encoding,(m,0),(e,0)), entity(encoding,(m,0),(e,1)), entity(scale,(v,0),(s,0)), entity(scale,(v,0),(s,1))]\n",
+      "['size_without_point_text', 'shape_without_point', 'categorical_not_color', 'shape_not_ordinal']\n"
      ]
     }
    ],
    "source": [
-    "from draco import get_violations\n",
+    "from draco import Draco\n",
     "from draco.asp_utils import blocks_to_program\n",
+    "\n",
+    "d = Draco()\n",
     "\n",
     "c = \"\".join(\n",
     "    blocks_to_program(\n",
@@ -155,7 +160,7 @@
     "    pprint(answer_set_to_dict(model.answer_set))\n",
     "    print(model.answer_set)\n",
     "    answer = [str(symbol) + \". \" for symbol in model.answer_set]\n",
-    "    print(get_violations(answer))"
+    "    print(d.get_violations(answer))"
    ]
   },
   {
@@ -169,7 +174,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('draco')",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +188,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8cbf43381becf335288b6abafb11bb428a5ff10871fda3a9373467d6e60abc50"
+   }
   }
  },
  "nbformat": 4,
