deploy: 00b498b0362242ac635a547aae1c4484ccd69be7

--- a/_sources/guide.ipynb
+++ b/_sources/guide.ipynb
@@ -11,12 +11,16 @@
   {
    "cell_type": "markdown",
    "id": "promising-steal",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## How to customize or extend the knowledge base\n",
     "\n",
     "You can design your own description language and use it with Draco or extend the existing language we use here. If you don't know where to start with the constraints, you can first use our [`run_clingo`](https://dig.cmu.edu/draco2/api/run.html#draco.run.run_clingo) and [`programs`](https://dig.cmu.edu/draco2/api/programs.html) API to generate some recommendations. Then, you should be able to find some recommendations that should have been left out, and you can write constraints to reflect them.  \n",
-    "If you write your own despription language, you need to set up the search space in a similar way to [`generate.lp`](https://github.com/cmudig/draco2/blob/main/draco/asp/generate.lp) before trying to generate recommendations.\n",
+    "If you write your own description language, you need to set up the search space in a similar way to [`generate.lp`](https://github.com/cmudig/draco2/blob/main/draco/asp/generate.lp) before trying to generate recommendations.\n",
     "\n",
     "For example, the following snippet shows how to use the `run_clingo` API to generate one recommendation. You can set a different number to look into more results. "
    ]
@@ -97,7 +101,11 @@
   {
    "cell_type": "markdown",
    "id": "8866d38f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "If you see that there are too many recommendations, you can:\n",
     " * add more hard constraints\n",
@@ -108,7 +116,7 @@
     " * check if some of your constraints are too tight, and move them to soft constraints\n",
     " \n",
     "\n",
-    "If you see no recommendations, you might have made mistakes in the hard constraints. You can allow violations to check what are the common ones by removing the `violation` constriant, which forbids any violations, from the programs. Below is an example: "
+    "If you see no recommendations, you might have made mistakes in the hard constraints. You can allow violations to check what are the common ones by removing the `violation` constraint, which forbids any violations, from the programs. Below is an example:"
    ]
   },
   {
