--- a/_sources/api/draco.ipynb
+++ b/_sources/api/draco.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "6e2b382c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Draco Helper Class\n",
     "\n",
@@ -13,19 +17,27 @@
   {
    "cell_type": "markdown",
    "id": "c61fd747",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Class Documentation\n",
     "\n",
     "```{eval-rst}\n",
-    ".. autoclass:: draco.Draco()\n",
+    ".. autoclass:: draco.Draco\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6ca28067",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Usage Example"
    ]
@@ -34,7 +46,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "90fb6a61",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from draco import Draco\n",
@@ -46,7 +62,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "223194f8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "valid_spec = \"\"\"\n",
@@ -72,7 +92,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "8192c897",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -93,7 +117,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "06e09203",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -114,7 +142,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0678a09e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "invalid_spec = \"\"\"\n",
@@ -141,7 +173,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "7f8379d6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -162,7 +198,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "fc008b2a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -183,7 +223,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a39a62c1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
