deploy: c9cb63ad39a715403d3248e7b226f3306a069941

--- a/_sources/applications/recommendation.ipynb
+++ b/_sources/applications/recommendation.ipynb
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Histogramm\n",
+    "## Histogram\n",
     "\n",
-    "In this example, we tell Draco to show a binned chart. A possible visualization is a tick plot but because the tick marks would overlap, Draco adds an addicional count encoding."
+    "In this example, we tell Draco to show a binned chart. A possible visualization is a tick plot but because the tick marks would overlap, Draco adds an additional count encoding."
    ]
   },
   {
@@ -61,37 +61,13 @@
       "{'field': [{'name': 'temperature', 'type': 'number', 'unique': 100}],\n",
       " 'number_rows': 100,\n",
       " 'task': 'summary',\n",
-      " 'view': [{'mark': [{'channel': 'y',\n",
-      "                     'discrete_size': 10,\n",
-      "                     'encoding': [{'binning': 10,\n",
+      " 'view': [{'mark': [{'encoding': [{'binning': 10,\n",
       "                                   'channel': 'x',\n",
-      "                                   'encoding_cardinality': 10,\n",
-      "                                   'field': ('f', 0),\n",
-      "                                   'scale_type': 'linear',\n",
-      "                                   'type': 'linear'},\n",
-      "                                  {'aggregate': 'count',\n",
-      "                                   'channel': 'y',\n",
-      "                                   'scale_type': 'linear',\n",
-      "                                   'type': 'linear',\n",
-      "                                   'zero': 'true'}],\n",
-      "                     'mark_channel_cont': 'y',\n",
-      "                     'mark_channel_discrete_or_binned': 'x',\n",
-      "                     'mark_encoding_cont': ('e', 1),\n",
-      "                     'mark_encoding_discrete_or_binned': ('e', 0),\n",
-      "                     'scale': ('e', 0),\n",
-      "                     'type': 'bar',\n",
-      "                     'x_cardinality': 10}],\n",
-      "           'scale': [{'aggregate': 'count',\n",
-      "                      'channel': 'y',\n",
-      "                      'scale_type': 'linear',\n",
-      "                      'type': 'linear',\n",
-      "                      'zero': 'true'},\n",
-      "                     {'binning': 10,\n",
-      "                      'channel': 'x',\n",
-      "                      'encoding_cardinality': 10,\n",
-      "                      'field': ('f', 0),\n",
-      "                      'scale_type': 'linear',\n",
-      "                      'type': 'linear'}]}]}\n",
+      "                                   'field': ('f', 0)},\n",
+      "                                  {'aggregate': 'count', 'channel': 'y'}],\n",
+      "                     'type': 'bar'}],\n",
+      "           'scale': [{'channel': 'x', 'type': 'linear'},\n",
+      "                     {'channel': 'y', 'type': 'linear', 'zero': 'true'}]}]}\n",
       "VIOLATED PREFERENCES:\n",
       "defaultdict(<class 'int'>,\n",
       "            {'aggregate': 1,\n",
@@ -145,23 +121,21 @@
       "INPUT:\n",
       "attribute(number_rows,root,100).\n",
       "\n",
-      "entity(field,root,(f,0)).\n",
-      "attribute((field,name),(f,0),temperature).\n",
-      "attribute((field,type),(f,0),number).\n",
+      "entity(field,root,f0).\n",
+      "attribute((field,name),f0,temperature).\n",
+      "attribute((field,type),f0,number).\n",
       "\n",
-      "entity(field,root,(f,1)).\n",
-      "attribute((field,name),(f,1),precipitation).\n",
-      "attribute((field,type),(f,1),number).\n",
+      "entity(field,root,f1).\n",
+      "attribute((field,name),f1,precipitation).\n",
+      "attribute((field,type),f1,number).\n",
       "\n",
-      "entity(view,root,(v,0)).\n",
-      "entity(mark,(v,0),(m,0)).\n",
-      "entity(encoding,(m,0),(e,0)).\n",
-      "attribute((encoding,field),(e,0),(f,0)).\n",
-      "entity(encoding,(m,0),(e,1)).\n",
-      "attribute((encoding,field),(e,1),(f,1)).\n",
+      "entity(view,root,v0).\n",
       "\n",
-      "entity(scale,(v,0),(s,0)).\n",
-      "entity(scale,(v,0),(s,1)).\n",
+      "entity(mark,v0,m).\n",
+      "entity(encoding,m,e0).\n",
+      "attribute((encoding,field),e0,f0).\n",
+      "entity(encoding,m,e1).\n",
+      "attribute((encoding,field),e1,f1).\n",
       "\n",
       "#show entity/3.\n",
       "#show attribute/3.\n",
@@ -171,33 +145,11 @@
       "           {'name': 'precipitation', 'type': 'number'}],\n",
       " 'number_rows': 100,\n",
       " 'task': 'summary',\n",
-      " 'view': [{'mark': [{'channel': 'y',\n",
-      "                     'encoding': [{'channel': 'x',\n",
-      "                                   'field': ('f', 0),\n",
-      "                                   'scale_type': 'linear',\n",
-      "                                   'type': 'linear',\n",
-      "                                   'zero': 'true'},\n",
-      "                                  {'channel': 'y',\n",
-      "                                   'field': ('f', 1),\n",
-      "                                   'scale_type': 'linear',\n",
-      "                                   'type': 'linear',\n",
-      "                                   'zero': 'true'}],\n",
-      "                     'mark_channel_cont': 'y',\n",
-      "                     'mark_encoding_cont': ('e', 1),\n",
-      "                     'scale': ('e', 0),\n",
+      " 'view': [{'mark': [{'encoding': [{'channel': 'y', 'field': 'f0'},\n",
+      "                                  {'channel': 'x', 'field': 'f1'}],\n",
       "                     'type': 'point'}],\n",
-      "           'scale': [{'type': 'ordinal'},\n",
-      "                     {'type': 'ordinal'},\n",
-      "                     {'channel': 'y',\n",
-      "                      'field': ('f', 1),\n",
-      "                      'scale_type': 'linear',\n",
-      "                      'type': 'linear',\n",
-      "                      'zero': 'true'},\n",
-      "                     {'channel': 'x',\n",
-      "                      'field': ('f', 0),\n",
-      "                      'scale_type': 'linear',\n",
-      "                      'type': 'linear',\n",
-      "                      'zero': 'true'}]}]}\n",
+      "           'scale': [{'channel': 'y', 'type': 'linear', 'zero': 'true'},\n",
+      "                     {'channel': 'x', 'type': 'linear', 'zero': 'true'}]}]}\n",
       "VIOLATED PREFERENCES:\n",
       "defaultdict(<class 'int'>,\n",
       "            {'c_c_point': 1,\n",
@@ -214,13 +166,13 @@
    ],
    "source": [
     "with open(\"../../draco/asp/examples/scatter.lp\") as f:\n",
-    "    hist_spec = f.read()\n",
+    "    scatter_spec = f.read()\n",
     "\n",
     "print(\"INPUT:\")\n",
-    "print(hist_spec)\n",
+    "print(scatter_spec)\n",
     "\n",
     "print(\"OUTPUT:\")\n",
-    "model = next(d.complete_spec(hist_spec))\n",
+    "model = next(d.complete_spec(scatter_spec))\n",
     "pprint(answer_set_to_dict(model.answer_set))\n",
     "\n",
     "print(\"VIOLATED PREFERENCES:\")\n",
@@ -237,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('draco')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -251,9 +203,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "8cbf43381becf335288b6abafb11bb428a5ff10871fda3a9373467d6e60abc50"
